# Fine-Tuned-Domain-LLM-QLoRA

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: pipeline.py
evaluation/: evaluator.py  failure_analysis.py
frontend/: .env.local.example  .gitignore  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/compare/: route.ts
frontend/app/api/judge/: route.ts
frontend/app/components/: CompareTab.tsx  Dashboard.tsx  DatasetTab.tsx  FailuresTab.tsx  JudgePanel.tsx  MetricsTab.tsx  PlaceholderBadge.tsx
frontend/data/: dataset_card.json  failures.json  metrics.json
frontend/lib/: data.ts  providers.ts
scripts/: export_frontend_data.py  run_all.py
serving/: api.py  modal_app.py
space/: README.md  app.py  requirements.txt
tests/: test_pipeline.py
training/: train_dpo.py  train_lora.py  train_qlora.py
